# mascoty

./: .gitignore  README.md
.github/workflows/: build.yaml  build.yml
backend/: build.rs
backend/.github/workflows/: build.yml
backend/src/: mascot.rs  utils.rs
backend/src/config/: config.rs  config.yaml
builder/: .gitignore  Cargo.toml
builder/src/: input.rs  main.rs  mascot.rs  service.rs  utils.rs
builder/src/config/: config.rs  config.yaml  mod.rs  tests.rs
desktop/: .gitignore  build.gradle
desktop/src/main/java/org/mascoty/: MainFrame.java  Mascot.java
frontend/: build.gradle
frontend/src/main/java/org/mascoty/: Main.java  Picture.java
proto/: mascot.proto
